fix: :bug: repository and in memory data
